# irods_filesystem

./: CMakeLists.txt  README.md  compile.sh  compile_with_lib.sh  run_example.sh
include/: filesystem.hpp  filesystem_error.hpp  irods_filesystem.hpp  irods_path.hpp  object_status.hpp  path.hpp
include/filesystem/: collection_entry.hpp  collection_iterator.hpp  detail.hpp  filesystem.hpp  path.hpp  path_traits.hpp  recursive_collection_iterator.hpp
include/irods/: filesystem.hpp
include/irods/filesystem/: .path.hpp.swo  .path_traits.hpp.swo  collection_entry.hpp  collection_iterator.hpp  config.hpp  copy_options.hpp  detail.hpp  filesystem.hpp  filesystem_error.hpp  object_status.hpp  path.hpp  path.tpp  path_traits.hpp  permissions.hpp  recursive_collection_iterator.hpp
src/: collection_iterator.cpp  filesystem.cpp  irods_filesystem.cpp  irods_path.cpp  path.cpp  recursive_collection_iterator.cpp
test/: main.cpp
unit_tests/: CMakeLists.txt  compile_with_lib.sh  run_example.sh
unit_tests/src/: path.cpp
